--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@
 }
 
 .header__subtitle {
+  margin: 0;
   position: absolute;
   width: 388px;
   left: 64px;
@@ -65,25 +66,28 @@
 
 .logo {
   z-index: 1;
+  width: 183px;
 }
 
 .logo_place_header {
   position: absolute;
+  height: 32px;
   top: 30px;
   left: 64px;
 }
 
 .logo_place_footer {
-  width: 183px;
   height: 35px;
 }
 
 .description {
   margin: 100px 0;
+  display: flex;
+  justify-content: center;
 }
 
 .two-columns {
-  margin: 0 auto;
+  /* margin: 0 auto; */
   display: flex;
   width: 80%;
   justify-content: space-between;
@@ -150,6 +154,7 @@
 }
 
 .table {
+  padding: 0;
   position: relative;
   display: flex;
   margin: 0 auto;
@@ -255,9 +260,7 @@
 }
 
 .footer {
-  min-height: 350px;
   padding: 60px 0 40px;
-  box-sizing: border-box;
   background-color: #1f1f1f;
 }
 
@@ -265,8 +268,7 @@
   display: flex;
   margin: 0 auto;
   width: 90%;
-  /* height: 100%; */
-  /* min-height: 350px; */
+  height: 350px;
   justify-content: space-between;
 }
 
