--- a/styles/style.css
+++ b/styles/style.css
@@ -259,15 +259,17 @@
 }
 
 .footer {
+  display: flex;
   padding: 60px 0 40px;
   background-color: #1f1f1f;
+  min-height: 350px;
+  box-sizing: border-box;
+  justify-content: center;
 }
 
 .footer__columns {
   display: flex;
-  margin: 0 auto;
   width: 90%;
-  height: 350px;
   justify-content: space-between;
 }
 
