--- a/styles/style.css
+++ b/styles/style.css
@@ -146,7 +146,9 @@
 }
 
 .section-title_theme_dark {
+  position: relative;
   color: #fff;
+  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
@@ -195,7 +197,7 @@
 .feynman {
   position: relative;
   padding-top: 100px;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   box-sizing: border-box;
 }
@@ -254,6 +256,8 @@
   position: absolute;
   width: 877px;
   height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
   top: 0;
   right: -210px;
 }
@@ -311,7 +315,7 @@
   font-weight: normal;
 }
 
-.footer__link-icon {
+.footer__social-icon {
   width: 16px;
   height: 16px;
   margin-right: 10px;
