--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,5 +6,6 @@
     max-height: 756px;
     background-color: #f2f2f2;
     align-items: center;
+    overflow: hidden;
     /* выше установили ограничения для секции */
   }
