--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,7 +1,9 @@
 .cards {
+    padding: 0;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     width: 920px;
     gap: 0 100px;
+    list-style: none;
 }
