--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,4 +1,10 @@
 .header__link {
     text-decoration: none;
     color: #2f80ed;
+    transition: .05s opacity linear;
+    opacity: 1;
   }
+
+.header__link:hover {
+  opacity: .5;
+}
