--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -3,4 +3,11 @@
     line-height: 42px;
     text-decoration: none;
     color: #2f80ed;
+    align-self: flex-start;
+    transition: .05s opacity linear;
+    opacity: 1;
+  }
+
+.khan__buy-link:hover {
+  opacity: .5;
 }
