--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -1,4 +1,10 @@
 .resources__logo {
     width: 270px;
     height: 38px;
+    transition: .1s opacity linear;
+    opacity: 1;
+  }
+
+.resources__logo:hover {
+  opacity: .6;
 }
