--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -4,4 +4,7 @@
     height: 877px;
     top: 0;
     right: -210px;
+    background-image: url("../../../images/kaufman/kaufman-triangle.svg");
+    background-size: cover;
+    z-index: 0;
   }
