--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -1,8 +1,10 @@
 .section-subtitle {
-    width: 60%;
-    margin: 20px auto 0;
-    text-align: center;
-    font-size: 24px;
-    font-weight: normal;
-    line-height: 34px;
+  position: relative;
+  width: 60%;
+  margin: 20px auto 0;
+  text-align: center;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+  z-index: 1;
   }
